--- a/src/app/post/list/list.module.css
+++ b/src/app/post/list/list.module.css
@@ -5,6 +5,10 @@
   overflow: hidden;
   transition: all 0.3s ease-in-out;
 
+  @media (900px >= width) {
+    min-height: 300px;
+  }
+
   &:hover {
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
   }
