--- a/src/app/post/list/list.module.css
+++ b/src/app/post/list/list.module.css
@@ -1,13 +1,9 @@
 .post-list {
-  min-height: 500px;
+  min-height: clamp(200px, 30vw, 500px);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: all 0.3s ease-in-out;
-
-  @media (900px >= width) {
-    min-height: 300px;
-  }
 
   &:hover {
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
@@ -34,12 +30,17 @@
   width: 90%;
   aspect-ratio: 1;
   border-radius: 10px;
+
+  @media (1100px >= width) {
+    font-size: 2.725vw;
+  }
 }
 
 .post-info {
   display: flex;
   gap: 1rem;
   width: 90%;
+  white-space: nowrap;
 }
 
 .profile-img {
