게시물 리스트 디자인 보완

--- a/src/app/post/list/list.module.css
+++ b/src/app/post/list/list.module.css
@@ -4,6 +4,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: all 0.3s ease-in-out;
+  padding: 1.2rem;
 
   &:hover {
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
@@ -27,9 +28,11 @@
   align-items: center;
   font-size: 2rem;
   background-color: #cfcfcf;
-  width: 90%;
+  width: 100%;
   aspect-ratio: 1;
   border-radius: 10px;
+  font-weight: 700;
+  color: rgb(255, 245, 245);
 
   @media (1100px >= width) {
     font-size: 2.725vw;
@@ -39,7 +42,7 @@
 .post-info {
   display: flex;
   gap: 1rem;
-  width: 90%;
+  width: 100%;
   white-space: nowrap;
 }
 
